# flappy-bird

./: .gitignore  bob.py  bot.py  feedforward.conf  flappy.py  pyproject.toml
flappy/: bot.py  feedforward.conf  flappy.py
